# dezero3

./: .gitignore  README.md  pyproject.toml
dezero/: __init__.py  core.py  functions.py  utils.py
step/: __init__.py  step01.py  step02.py  step03.py  step06.py  step07.py  step08.py  step09.py  step13.py  step14.py  step16.py  step18.py  step19.py  step20.py  step21.py  step22.py  step26.py
