[tool.poetry]
name = "dezero"
version = "0.1.0"
description = ""
authors = ["no1986 <n.ohkawa1221@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
imgcat = "^0.5.0"
graphviz = "^0.20.1"
matplotlib = "3.5.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true